{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 81,
  "lineage": "8999e116-bae0-4d95-0db6-cc37dd88372d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686255979099:security-group/sg-027e1d749a50a5fc1",
            "description": "Security group for EKS control plane API server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-027e1d749a50a5fc1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow worker nodes/pods to call EKS Control Plane API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04ab006d7cfbbe55e"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "jiyna-eks-project-dev-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "686255979099",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "jiyna-eks-project-dev-eks-cluster-sg",
              "Project": "jiyna-eks-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jiyna-eks-project-dev-eks-cluster-sg",
              "Project": "jiyna-eks-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6c11c6815c3062d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686255979099:security-group/sg-04ab006d7cfbbe55e",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ab006d7cfbbe55e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow EKS control plane HTTPS traffic to nodes",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-027e1d749a50a5fc1"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow EKS control plane traffic to nodes",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-027e1d749a50a5fc1"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow intra-node communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "jiyna-eks-project-dev-node-sg",
            "name_prefix": "",
            "owner_id": "686255979099",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "jiyna-eks-project-dev-node-sg",
              "Project": "jiyna-eks-project",
              "kubernetes.io/cluster/jiyna-eks-project-dev-cluster": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "jiyna-eks-project-dev-node-sg",
              "Project": "jiyna-eks-project",
              "kubernetes.io/cluster/jiyna-eks-project-dev-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6c11c6815c3062d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jiyna_eks_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686255979099:subnet/subnet-0fe770f91f3de2cd6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe770f91f3de2cd6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686255979099",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jiyna_eks-private-subnet-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "jiyna_eks-private-subnet-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b6c11c6815c3062d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686255979099:subnet/subnet-03eaf4a85c1fe3b6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03eaf4a85c1fe3b6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686255979099",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jiyna_eks-private-subnet-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "jiyna_eks-private-subnet-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b6c11c6815c3062d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jiyna_eks_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686255979099:subnet/subnet-06a7d1e4520113d64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a7d1e4520113d64",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "686255979099",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jiyna_eks-public-subnet-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "jiyna_eks-public-subnet-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b6c11c6815c3062d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686255979099:subnet/subnet-0dd10d7a5bf843f79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd10d7a5bf843f79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "686255979099",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jiyna_eks-public-subnet-2",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "jiyna_eks-public-subnet-2",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b6c11c6815c3062d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686255979099:vpc/vpc-0b6c11c6815c3062d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03a48142f5ec58dd2",
            "default_route_table_id": "rtb-050503b2138cbf383",
            "default_security_group_id": "sg-04ab15a26194e5019",
            "dhcp_options_id": "dopt-0cf65eb5f324a88ad",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b6c11c6815c3062d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-050503b2138cbf383",
            "owner_id": "686255979099",
            "tags": {
              "Name": "jiyna_eks-vpc"
            },
            "tags_all": {
              "Name": "jiyna_eks-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}